Improving the Unionists Path

--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -521,6 +521,7 @@ PB_AME_Winchester_Rifles:0 "Winchester Arms Association"
 AME_wpfp_arsenal_organization:0 "West Point Foundry"
 AME_curtiss_organization:0 "Curtiss Aeroplane Company"
 AME_tri_industries_organization:0 "Tri Industries"
+AME_newyork_shipbuilding_organization:0 "New York Shipbuilding"
 AME_imb_organization:0 "Imperial Business Machines"
 PB_AME_Vickers_American:0 "Vickers-Armstrong"
 PB_AME_Maxwell_Motors:0 "Maxwell-Chrysler"
