--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -232,6 +232,8 @@
 
  cybers_tech:0 "Cyber Tech"
  EQUIPMENT_ARMOR:0 "Armour"
+
+ cat_bioaugmented_unit:0 "Bioaugmented Units"
  
  tech_automat_great_war:0 "Great War Automat"
  tech_automat_light_1:0 "Duopod I"
