--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -54,6 +54,12 @@ Automats_crisis_flag_tt:0 "§RThe Automat Crisis has hit the United Commonwealth
 
 AME_Unlock_Decisions_to_Expand_West:0 "£decision_icon_small §PDecisions for to Manifest our Destiny in America will be unlocked§!"
 
+AME_ENG_Car_Warning_tt_1:0 "We will §Rlose§! control and ownership of §YJamaica, the Leeward Island, the Old French Caribbean, and the Windward Islands.§!"
+
+AME_ENG_Car_Warning_tt_2:0 "We will §Rlose§! control and ownership of §YJamaica, the Leeward Island, the Old French Caribbean, the Windward Islands and Trinidad.§!"
+
+focus_completion_warning_tt:0 "§YThe completion effects of the ongoing focus change§!"
+
 ##########################
 # PARTIES
 ##########################
@@ -622,6 +628,8 @@ PB_AME_End_the_Arcology_War_desc:0 "Fighting crime and bootlegging is like a gam
 PB_AME_Drug_Capital_of_America:0 "Experimental Drug Facilities"
 PB_AME_Drug_Capital_of_America_desc:0 "Some researchers are exploring the potential use of drugs to enhance cognitive abilities and physical performance in soldiers. This could mean improved reaction times, increased endurance, and better decision-making under stress. Of course, there are ethical concerns to consider, but ethics is the realm of the coward, and America needs all the edge it can get."
 PB_AME_Subterranean_Architecture:0 "Subterranean Architecture"
+PB_AME_Nora_Research_Center:0 "Nora Research Center"
+PB_AME_Nora_Research_Center_desc:0 "The Scientific Development regarding Argology and other similiar topics is far from finished. As such the Nora Research Center will be establish in Indianapolis. This research center will be bastion of scientific development but will also serve as university and training facility to teach future upcoming scientists."
 PB_AME_Subterranean_Architecture_desc:0 "It's like a whole new dimension to architecture, with endless possibilities for design and construction. From subterranean homes to underground museums, the potential for underground architecture is limitless. By building downwards, we can dramatically improve the amount of space available to the populations of the megacities."
 PB_AME_Special_Economic_Zones:0 "Introduce the S.E.Z. Scheme"
 PB_AME_Special_Economic_Zones_desc:0 "Special economic zones are like creating a playground for free trade. It's a designated area where businesses can operate with minimal government interference and low taxes, like a sandbox where companies can experiment and thrive. While some might claim this is merely a method for large corporations to further consolidate power, we see it as a way to improve economic efficiency."
@@ -1137,8 +1145,11 @@ PB_AME_Governor_Two_Empires_desc:0 "Despite all hardships our two nations are st
 PB_AME_Influence_the_Corrupt_Isles:0 "Influences in Isles"
 PB_AME_Influence_the_Corrupt_Isles_desc:0 "Despite what many think not everyone living in Britain is loyal to the Crown and London.\n\nWe have several connections like in the EIEC or IBM who would rather have a American-Dominated Confederation. There are many who are tired of the old corrupt conservative world views which Buckingham and Westminister preach. And there are many more who desire actual autonomy. All little helpers benefiting us and hindering Londons efforts."
 PB_AME_Together_Forever:0 "For Another 300 Years"
+PB_AME_Together_Forever_desc:0 "For Another 300 Years - The British Empire stands firm, its borders stretch to every corner of the globe. But now, it is not just Britannia that rules the waves. The American Commonwealth stands now as an equal partner within this Empire, our combined industry and military will ensure safety and stability in our quest for civilization. When war comes, we will stand firm. And together we shall fight, whether on the beaches of Dover or the streets of Philadelphia. We shall command our realm together for centuries to come."
 PB_AME_The_New_Imperial_Master:0 "Rising like Byzantium"
+PB_AME_The_New_Imperial_Master_desc:0 "Britain has commanded its Empire for centuries. While much in the way of glory has been achieved, London has become unfit to handle the burden of leadership. Though parts of our relationship have been difficult, we don't wish to see the Empire fall. Our economy and military have outmatched the Home Islands, so we must take their place as the true masters. Of course, London would never willing handle over power. We will unite those within the Empire to our cause, show them that only we can rule the waves."
 PB_AME_Abandon_the_Isles:0 "Abandoning the Tyranny"
+PB_AME_Abandon_the_Isles_desc:0 "We have sat under the yoke of London for too long. Despite our contributions and sacrifices in the previous decades, Britain has does everything they can to exploit us, making sure we never forget that we exist under their boot. But no longer. In 1776, Washington's Rebellion failed, but ours will not. Those brave men of the First Continental Army were no traitors, but heroes and we will live by their example or die victory. We cannot ignore the calls for freedom in streets, we shall fight for our freedom and for a new world! London shall give us freedom or give us death!"
 
 ##########################
 # MINISTERS
@@ -1971,6 +1982,12 @@ Unicom_Foreign_Policy.19.t:0 "How should we represent our case?"
 Unicom_Foreign_Policy.19.d:0 "The Government has decided "
 Unicom_Foreign_Policy.19.a:0 "Table-Talk is sufficient"
 Unicom_Foreign_Policy.19.b:0 "A Show of Force is necassary"
+
+Unicom_Foreign_Policy.20.t:0 "UC 'asks' to take control of the Caribbean Possessions"
+Unicom_Foreign_Policy.20.d:0 ""
+Unicom_Foreign_Policy.20.a:0 "They will not get one inch of land!"
+Unicom_Foreign_Policy.20.b:0 "Fine - But we will keep Trinidad"
+Unicom_Foreign_Policy.20.c:0 "We are stretched too thin..."
 
 Unicom_Independent.1.t:0 "The First Presidential Referendum"
 Unicom_Independent.1.d:0 "The United Commonwealth is holding an election after a long and brutal war with the British Empire, which ultimately resulted in a referendum to become a republic. The election is being hotly contested by a number of political parties, each with their own vision for the country's future.\n\nThe Commonwealth has been left deeply divided by the recent conflict, and many are looking to this election as an opportunity to heal old wounds and chart a new course forward.\n\nVoters are being asked to consider a range of issues, from the country's economic recovery to its relations with other nations. It remains to be seen who will emerge victorious, and what the future holds for this young and still-evolving republic."
