More AME and Interface

--- a/localisation/english/ideas_l_english.yml
+++ b/localisation/english/ideas_l_english.yml
@@ -587,6 +587,7 @@
  government:1 "Laws & Government"
  research_production:0 "Research & Production"
  military_staff:0 "Military Staff"
+ military_staff_2:0 "High Command"
  political_advisor:0 "Political Advisor"
  mobilization_laws:0 "Conscription Law"
  trade_laws:0 "Trade Law"
