--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -351,6 +351,7 @@ PB_AME_Continental_Superiority:0 "Continental Superiority"
 PB_AME_Ford_Production_Quotas_idea:0 "Increased Production Quotas"
 PB_AME_Union_Strikes_idea:0 "Union Strikes"
 AME_Megacorp_Manuevers:0 "Megacorp Manuevers"
+AME_Megacorp_Manuevers_desc:0 "The Megacorps of the Nation are unsatisfied with our government. They demand certain benefits or will otherwise continue to sabotage us."
 PB_Reintegrate_South:0 "Reintegrate the South"
 PB_Raise_National_Guard:0 "Raise the Provincial Guard"
 
