New Wild West States

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -947,3 +947,8 @@
  STATE_959:0 "Nanjing"
  STATE_960:0 "North Hebei"
  STATE_961:0 "Shandong"
+ STATE_962:0 "Waterloo"
+ STATE_963:0 "Istres"
+ STATE_964:0 "Santa Anna"
+ STATE_965:0 "San Sansa"
+ STATE_966:0 "Albuquerque"
