--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1393,3 +1393,4 @@
  VICTORY_POINTS_9741:0 "Alessandria"
  VICTORY_POINTS_3885:0 "Perugia"
  VICTORY_POINTS_883:0 "Foggia"
+ VICTORY_POINTS_13316:0 "Santa Anna"
