Prussian focus loc done + other stuff

--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -754,33 +754,33 @@
   PB_PRS_Arm_The_Forest_Brothers:0 "Arm The Forest Brothers"
   PB_PRS_Arm_The_Forest_Brothers_desc:0 "The situation in the Baltics has proven dire amongst the native Baltans. Many have held a sympathetic view to our nation, and some have made their way to our borders seaking refuge. Bouhler had previously welcomed such people as and we intend to go even further, by arming them in prepartion for a timely uprising that may be to our benefit."
   PB_PRS_Economic_Restructuring:0 "Economic Restructuring"
-  PB_PRS_Economic_Restructuring_desc:0 ""
+  PB_PRS_Economic_Restructuring_desc:0 "The state of Prussia's economy can be best described as a complete mess, Bouhler has gone ahead and stuck his perverted ideology in every factoring and town shop and the affects are starting to show. The economy that we have inherited has not been designed to follow anarcho-liberal practises of finance and if we wish to revert the changes made then we best get get ourselves ready for some hard work and long nights. "
   PB_PRS_Recalibrate_The_Factories:0 "Recalibrate The Factories"
-  PB_PRS_Recalibrate_The_Factories_desc:0 ""
+  PB_PRS_Recalibrate_The_Factories_desc:0 "For some reason the fools of the previous regime instituted various archaic laws and regulations around the establishment of private businesses. Let us do away with this bureaucratic jargon. "
   PB_PRS_Privatization_Efforts:0 "Privatization Efforts"
-  PB_PRS_Privatization_Efforts_desc:0 ""
+  PB_PRS_Privatization_Efforts_desc:0 "Many of the businesses that we have assumed control over once belonged to Bouhler's private economic fiefdom, the result of which has unsurprisngly left us with an economy which barely produces anything at a profit, lets cut the fat and preserve those that are actually working."
   PB_PRS_Chat_With_The_Bankers:0 "Chat With The Bankers"
-  PB_PRS_Chat_With_The_Bankers_desc:0 ""
+  PB_PRS_Chat_With_The_Bankers_desc:0 "Most of the economic elite were purged by the Bouhler regime, for those that managed many are relactant to assist us out of concern that the Bouhler threat might once again rise up. Lets put these worries to bed and convince these famed industrialists and bankers that they are now in safe hands."
   PB_PRS_Drive_The_Gears_Of_Industry:0 "Drive The Gears Of Industry"
-  PB_PRS_Drive_The_Gears_Of_Industry_desc:0 ""
+  PB_PRS_Drive_The_Gears_Of_Industry_desc:0 "Steel, coal, and rare minerals will become the lifeblood of our nation to which we will build a prosperous future out of, we only need to harness the potential given to us by our academic elite and make the most of what we have."
   PB_PRS_Strengthen_The_Free_Market:0 "Strengthen The Free Market"
-  PB_PRS_Strengthen_The_Free_Market_desc:0 ""
+  PB_PRS_Strengthen_The_Free_Market_desc:0 "With most of the economic reforms dealt with it is now time for us to let go of our state obligations towards economics, let the free hand of the market deal with the rest."
   PB_PRS_Strengthen_The_Junkers:0 "Strengthen The Junkers"
-  PB_PRS_Strengthen_The_Junkers_desc:0 ""
+  PB_PRS_Strengthen_The_Junkers_desc:0 "The Junkers have brought peace and stability to a nation once confused with its own national purpose, we were save by the kings closest guard and for that we shall forever be in their servitude."
   PB_PRS_The_Royal_Konigsberg_Armoury:0 "The Royal Königsberg Armoury"
-  PB_PRS_The_Royal_Konigsberg_Armoury_desc:0 ""
+  PB_PRS_The_Royal_Konigsberg_Armoury_desc:0 "The Royal Königsberg Armoury has been home to some of the finest craftsmanship know across Europe, some of the continents finest weapons makers reside in this very city and it would be a shame to see such proven men lose their professions to the tides of industry."
   PB_PRS_Industrial_Know_How:0 "Industrial Know How"
-  PB_PRS_Industrial_Know_How_desc:0 ""
+  PB_PRS_Industrial_Know_How_desc:0 "It is merely not enough to simply build more factories, no me must come to understand every technical detail, every shortfall, and identify how to best deal with these things from a logical point of view."
   PB_PRS_Prussias_Grandest_Minds:0 "Prussia's Grandest Minds"
-  PB_PRS_Prussias_Grandest_Minds_desc:0 ""
+  PB_PRS_Prussias_Grandest_Minds_desc:0 "Prussia has always been home to some of the globe’s greatest mathematicians, philosophers, industrialists and the like. Let us continue this proud national legacy of ours."
   PB_PRS_Mother_Nature_Tamed:0 "Mother Nature Tamed"
-  PB_PRS_Mother_Nature_Tamed_desc:0 ""
+  PB_PRS_Mother_Nature_Tamed_desc:0 "Let us expand our urban centres, raise our homes, and conquer these lands of nature to make ourselves a home of steel."
   PB_PRS_Expand_The_Arsenals:0 "Expand The Arsenals"
-  PB_PRS_Expand_The_Arsenals_desc:0 ""
+  PB_PRS_Expand_The_Arsenals_desc:0 "War in Europe is a certainity, everyone knows it. So why wait for war to arrive on Prussia's doorstep, instead let us be the thunder to which our enemies will fear."
   PB_PRS_Salvation_Through_Sacrifice:0 "Salvation Through Sacrifice"
-  PB_PRS_Salvation_Through_Sacrifice_desc:0 ""
+  PB_PRS_Salvation_Through_Sacrifice_desc:0 "There is no cost too great for country."
   PB_PRS_Liberation_Through_Dedication:0 "Liberation Through Dedication"
-  PB_PRS_Liberation_Through_Dedication_desc:0 ""
+  PB_PRS_Liberation_Through_Dedication_desc:0 "Through work shall you find your peace."
   PB_PRS_Imprison_Radical_Agitators:0 "Imprison Radical Agitators"
   PB_PRS_Imprison_Radical_Agitators_desc:0 "With King Friedrich at the helm of out nation the time has come to rid this country of Bouhler's destructive influence. Ever flag, banner, and symbol of his regime will be undone. His influence over Prussia has come to a decisive end, let us remove his lackeys from their posts and fill these empty desks with good loyal men. "
   PB_PRS_Secure_The_State:0 "Secure The State"
@@ -817,8 +817,6 @@
   PB_PRS_Request_Scandinavian_Arms_desc:0 "The countries of Scandinavia will soon too face the wrath of France and Russia, till then it is vital that we are able to fend of these invading armies to give our allies abroad time to prepare and eventually respond."
   PB_PRS_Germany_United:0 "Germany United"
   PB_PRS_Germany_United_desc:0 "It is done, our months spent defending against superior foes were not in vein, we have managed to convince much of the German army in exile that we are in fact the true heirs of their now dying empire. Let us welcome those once done wrong by our mortal enemies, and both German and Prussian shall walk into the rest of the century not as foe, but as brothers."
-  
-
 
   ##########################
   # EVENTS
