--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -843,54 +843,54 @@
   Prussian.6.d:0 "After months of cultural integration efforts in the form of festivals, mandatory language lessons, and the odd enforced patriotism we have managed to integrate Posen as an inseparable region of Prussia, whilst there may be the occasional dissenter for the most part Posen is Prussian." 
   Prussian.6.a:0 "Finally."
   Prussian.7.t:0 "The Last King Of Prussia"
-  Prussian.7.d:0 "" 
+  Prussian.7.d:0 "After many months of Junker interference in party politics Bouhler had finally had enough. The last remnants of the Prussian aristocracy were to meet their fate by a state planned midnight lynching that was to be conducted across the capital, whilst the final king of Prussia, Friedrich Albrecht was to be brought out into the countryside and shot dead where his body was to be buried in an unmarked location. The order was made and by late Friday afternoon the security forces of the nation’s two major cities in Danzig and Konigsberg rounded up anyone associated with the Junkers, whether that be by political affiliation or familial relation. Some five hundred junker related individuals were dragged out of their beds at the dead of night and were either killed or beaten so bad that they would be drinking through a straw for the rest of their lives, no one, not even those who had sworn loyalty to the party years prior was safe from these midnight door knocks. As for the king, his end was quick, little noise was made during his drive towards the outer country land and despite the occasional question as to where he was being taken little was said before his execution. On the minute of the moment Friedrich had cried and begged and offered to be exiled to Britain instead, but both his captors and he knew that at the end of it all that the legacy of the Prussian monarchy would come to a close. At that moment, somewhere at the Prussian-Polish Border a loud ear bleeding bang was heard, and no one had cared as to report what they heard, because at that time all anyone could hear, all over Prussia, was a bunch of loud ear bleeding bangs. " 
   Prussian.7.a:0 "Off with their head!"
   Prussian.8.t:0 "The Memel Convention"
-  Prussian.8.d:0 "" 
+  Prussian.8.d:0 "The Prussia foreign minister has sent a request that the territory of Memel, which currently is under our occupation, should be transferred to their rule. The justification being that Memel is home to a large Prussian diaspora and the land itself holds little value to our empire. The Prussians have promised us financial gain should we agree to their demands. " 
   Prussian.8.a:0 "Give the Prussians Memel."
   Prussian.8.b:0 "Who are they to demand anything?"
   Prussian.9.t:0 "The Russians Agree"
-  Prussian.9.d:0 "" 
+  Prussian.9.d:0 "The Russian foreign ministry in Konigsberg has approved of our request over the transfer of Memel. This can only be seen as a success of Russo-Prussian diplomacy. " 
   Prussian.9.a:0 "Honestly didn't think they would say yes."
   Prussian.10.t:0 "The Russians Refuse"
-  Prussian.10.d:0 "" 
+  Prussian.10.d:0 "The Russian foreign ministry in Konigsberg has denied our request over the transfer of Memel. This can only be seen as a failure of Russo-Prussian diplomacy.  We will have to gain these lands through alternative means." 
   Prussian.10.a:0 "Damn Russians!"
   Prussian.11.t:0 "The Prussians Demand Control of Berlin Territory"
-  Prussian.11.d:0 "" 
+  Prussian.11.d:0 "Prussia has recently slipped into revanchist like diplomacy when it comes to its territorial ambitions in Germany, this has of course led to issues relating to our holdings around Berlin. We could reject their demands or alternatively we could demand industrial compensation seeing that our occupation of such territory has been nothing more than an economic sink." 
   Prussian.11.a:0 "Give it to them for free."
   Prussian.11.b:0 "Demand Industrial Compensation."
   Prussian.11.c:0 "Not in a thousand years."
   Prussian.12.t:0 "Russia Agrees To Our Demands"
-  Prussian.12.d:0 "" 
+  Prussian.12.d:0 "Russias has decided to agree to our demands over the transfer of land from their subject in Berlin to us." 
   Prussian.12.a:0 "Wait really?"
   Prussian.13.t:0 "Russia Demands Compensation"
-  Prussian.13.d:0 "" 
+  Prussian.13.d:0 "Russias has decided to agree to our demands over the transfer of land from their subject in Berlin to us, however they are asking us for industrial compensation if we wish to see these lands under Prussian control." 
   Prussian.13.a:0 "How unsurprising."
   Prussian.14.t:0 "Russia Rejects Our Demands"
-  Prussian.14.d:0 "" 
+  Prussian.14.d:0 "We have received word from Russia that our demand over certain lands from their Berlin puppet has been outright rejected, we will have to find another way to liberate these Germans from their slavic oppressors. " 
   Prussian.14.a:0 "WHAT!"
   Prussian.15.t:0 "The Prussians Demand Control of Berlin Territory"
-  Prussian.15.d:0 "" 
+  Prussian.15.d:0 "Prussia has recently slipped into revanchist like diplomacy when it comes to its territorial ambitions in Germany, this has of course led to issues relating to our holdings around Berlin. We could reject their demands or alternatively we could demand industrial compensation seeing that our occupation of such territory has been nothing more than an economic sink." 
   Prussian.15.a:0 "Give it to them for free."
   Prussian.15.b:0 "Demand Industrial Compensation."
   Prussian.15.c:0 "Not in a thousand years."
   Prussian.16.t:0 "The Prussians Demand Control of Berlin Territory"
-  Prussian.16.d:0 "" 
+  Prussian.16.d:0 "Prussia has recently slipped into revanchist like diplomacy when it comes to its territorial ambitions in Germany, this has of course led to issues relating to our holdings around Berlin. We could reject their demands or alternatively we could demand industrial compensation seeing that our occupation of such territory has been nothing more than an economic sink." 
   Prussian.16.a:0 "Give it to them for free."
   Prussian.16.b:0 "Demand Industrial Compensation."
   Prussian.16.c:0 "Not in a thousand years."
   Prussian.17.t:0 "The Prussians Demand Control of Berlin Territory"
-  Prussian.17.d:0 "" 
+  Prussian.17.d:0 "Prussia has recently slipped into revanchist like diplomacy when it comes to its territorial ambitions in Germany, this has of course led to issues relating to our holdings around Berlin. We could reject their demands or alternatively we could demand industrial compensation seeing that our occupation of such territory has been nothing more than an economic sink." 
   Prussian.17.a:0 "Give it to them for free."
   Prussian.17.b:0 "Demand Industrial Compensation."
   Prussian.17.c:0 "Not in a thousand years."
   Prussian.18.t:0 "The Prussians Demand Control of Berlin Territory"
-  Prussian.18.d:0 "" 
+  Prussian.18.d:0 "Prussia has recently slipped into revanchist like diplomacy when it comes to its territorial ambitions in Germany, this has of course led to issues relating to our holdings around Berlin. We could reject their demands or alternatively we could demand industrial compensation seeing that our occupation of such territory has been nothing more than an economic sink." 
   Prussian.18.a:0 "Give it to them for free."
   Prussian.18.b:0 "Demand Industrial Compensation."
   Prussian.18.c:0 "Not in a thousand years."
   Prussian.19.t:0 "The Prussians Demand Control of Berlin Territory"
-  Prussian.19.d:0 "" 
+  Prussian.19.d:0 "Prussia has recently slipped into revanchist like diplomacy when it comes to its territorial ambitions in Germany, this has of course led to issues relating to our holdings around Berlin. We could reject their demands or alternatively we could demand industrial compensation seeing that our occupation of such territory has been nothing more than an economic sink." 
   Prussian.19.a:0 "Give it to them for free."
   Prussian.19.b:0 "Demand Industrial Compensation."
   Prussian.19.c:0 "Not in a thousand years."
@@ -942,11 +942,11 @@
   Prussian.32.a:0 "This could have its uses..."
   Prussian.32.b:0 "Such a object deserves to be destroyed."
   Prussian.33.t:0 "The Junker Threat"
-  Prussian.33.d:0 "" 
-  Prussian.33.a:0 "A cancer on out great nation."
+  Prussian.33.d:0 "The threat posed by the Junker aristocracy has made the political situation of Prussia rather unstable. Despite all the work Bouhler has done to secure our nation from the plague of corruption there are still those who wish to return to the old order. These traitors must be rooted out before they can mobilize their strength, should we be too slow to respond to their presence then we could see all the work we have achieved reduced to rubble. The weeks ahead will prove to the Prussian people once and for all whether Bouhler will secure them a period of peace, prosperity, and most importantly, an empire amongst Europe’s new order. " 
+  Prussian.33.a:0 "A cancer on our great nation."
 
   Prussian_Anarcho.1.t:0 "Prussian Exiles Arrive"
-  Prussian_Anarcho.1.d:0 "" 
+  Prussian_Anarcho.1.d:0 "With the Bouhler regime in Prussia upturned and replaced by the old Junker aristocracy many Bouhler loyalists have fled their home country and found their way to our nation. Many academics, military proffessionalists and the like are offering their services to us and it would be a shame to see their skills go to waste." 
   Prussian_Anarcho.1.a:0 "Anything To Further The Neo-Imperialist Cause"
   Prussian_Anarcho.2.t:0 "The Royal Coup"
   Prussian_Anarcho.2.d:0 "" 
