frw + intermarium stuff part one
eta for part two: never

--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -1826,6 +1826,8 @@
   PB_FRA_Piedmont_Conference_desc:0 "Savoy and Nice are home to thousands of proud and loyal Frenchman housed under an Italian banner. While the Italian state may be an ally of France the French people come first in state interests, politics comes second."
   PB_FRA_Egypt:0 "[EGY.GetFlag] Subject: Egypt"
   PB_FRA_Egypt_desc:0 "Egypt has long been under Anglo influence and whilst our nation has long contested London over their unrightful rule we have never truly had an opportunity like this to seize the moment and take what is rightfully ours, if we so dare."
+  PB_FRA_Found_Intermarium:0 "[POL.GetFlag] Subject: Intermarium Federation"
+  PB_FRA_Found_Intermarium_desc:0 "insert desc later"
 
   PB_FRA_Fund_The_Steelworks_Cat:0 "Heavy Industry Planning"
   PB_FRA_Fund_The_Steelworks_Cat_desc:0 "\n\n\n\n\n\nThe need for heavy industry is at a critical level. With the unemployement crisis leaving millions of French without jobs the supply of cheap, eager labour is at an all time high, a supply we will gracefully accept."
@@ -3303,6 +3305,148 @@
   BRT_SP_ni:0 "SPE Atlantique"
   BRT_SP_ni_DEF:0 "the SPE Atlantique"
   BRT_SP_ni_ADJ:0 "Atlantiquean"
-  
 
+  ##############################################
+  ### FRENCH COLLABORATION IN EASTERN EUROPE ###
+  ##############################################
   
+  POL_JD_French_Occupation:0 "Polish National Republic"
+  POL_JD_French_Occupation_DEF:0 "the Polish National Republic"
+  POL_JD_French_Occupation_ADJ:0 "Polish"
+  
+  POL_CM_French_Occupation:0 "Duchy of Poland"
+  POL_CM_French_Occupation_DEF:0 "the Duchy of Poland"
+  POL_CM_French_Occupation_ADJ:0 "Polish"
+  
+  POL_IA_French_Occupation:0 "Polish Peasants and Workers' Republic"
+  POL_IA_French_Occupation_DEF:0 "the Polish Peasants and Workers' Republic"
+  POL_IA_French_Occupation_ADJ:0 "Polish"
+  
+  POL_Militarist_French_Occupation:0 "Polish Authority"
+  POL_Militarist_French_Occupation_DEF:0 "the Polish Authority"
+  POL_Militarist_French_Occupation_ADJ:0 "Polish"
+
+  POL_SP_French_Occupation:0 "Empire of Polonia"
+  POL_SP_French_Occupation_DEF:0 "the Empire of Polonia"
+  POL_SP_French_Occupation_ADJ:0 "Polish"
+  
+  UKR_JD_French_Occupation:0 "National Republic of Ukraine"
+  UKR_JD_French_Occupation_DEF:0 "the National Republic of Ukraine"
+  UKR_JD_French_Occupation_ADJ:0 "Ukrainian"
+  
+  UKR_CM_French_Occupation:0 "Grand Principality of Kyiv"
+  UKR_CM_French_Occupation_DEF:0 "the Grand Principality of Kyiv"
+  UKR_CM_French_Occupation_ADJ:0 "Ukrainian"
+  
+  UKR_IA_French_Occupation:0 "Socialist Republic of Ukraine"
+  UKR_IA_French_Occupation_DEF:0 "the Socialist Republic of Ukraine"
+  UKR_IA_French_Occupation_ADJ:0 "Ukrainian"
+  
+  UKR_Militarist_French_Occupation:0 "Ukrainian State"
+  UKR_Militarist_French_Occupation_DEF:0 "the Ukrainian State"
+  UKR_Militarist_French_Occupation_ADJ:0 "Ukrainian"
+
+  UKR_SP_French_Occupation:0 "Ukrainian Authority"
+  UKR_SP_French_Occupation_DEF:0 "the Ukrainian Authority"
+  UKR_SP_French_Occupation_ADJ:0 "Ukrainian"
+  
+  BLR_JD_French_Occupation:0 "National Republic of Belarus"
+  BLR_JD_French_Occupation_DEF:0 "the National Republic of Belarus"
+  BLR_JD_French_Occupation_ADJ:0 "Belarusian"
+  
+  BLR_CM_French_Occupation:0 "Kingdom of Belarus"
+  BLR_CM_French_Occupation_DEF:0 "the Kingdom of Belarus"
+  BLR_CM_French_Occupation_ADJ:0 "Belarusian"
+  
+  BLR_IA_French_Occupation:0 "Revolutionary Belarusian Republic"
+  BLR_IA_French_Occupation_DEF:0 "the Revolutionary Belarusian Republic"
+  BLR_IA_French_Occupation_ADJ:0 "Belarusian"
+  
+  BLR_Militarist_French_Occupation:0 "Belarusian State"
+  BLR_Militarist_French_Occupation_DEF:0 "the Belarusian State"
+  BLR_Militarist_French_Occupation_ADJ:0 "Belarusian"
+
+  BLR_SP_French_Occupation:0 "Empire of Ruthenia"
+  BLR_SP_French_Occupation_DEF:0 "the Empire of Ruthenia"
+  BLR_SP_French_Occupation_ADJ:0 "Belarusian"
+  
+  BAL_JD_French_Occupation:0 "Unified National Republics of the Baltics"
+  BAL_JD_French_Occupation_DEF:0 "the Unified National Republics of the Baltics"
+  BAL_JD_French_Occupation_ADJ:0 "Baltic"
+  
+  BAL_CM_French_Occupation:0 "United Baltic Duchies"
+  BAL_CM_French_Occupation_DEF:0 "the United Baltic Duchies"
+  BAL_CM_French_Occupation_ADJ:0 "Baltic"
+  
+  BAL_IA_French_Occupation:0 "People’s Republic of the Baltics"
+  BAL_IA_French_Occupation_DEF:0 "the People’s Republic of the Baltics"
+  BAL_IA_French_Occupation_ADJ:0 "Baltic"
+  
+  BAL_Militarist_French_Occupation:0 "Baltic State"
+  BAL_Militarist_French_Occupation_DEF:0 "the Baltic State"
+  BAL_Militarist_French_Occupation_ADJ:0 "Baltic"
+
+  BAL_SP_French_Occupation:0 "Sarmaticum Authority"
+  BAL_SP_French_Occupation_DEF:0 "the Sarmaticum Authority"
+  BAL_SP_French_Occupation_ADJ:0 "Baltic"
+  
+  TRS_JD_French_Occupation:0 "United National Republics of Trans-Caucasia"
+  TRS_JD_French_Occupation_DEF:0 "the United National Republics of Trans-Caucasia"
+  TRS_JD_French_Occupation_ADJ:0 "Trans-Caucasian"
+  
+  TRS_CM_French_Occupation:0 "Trans-Caucasian Imperial March"
+  TRS_CM_French_Occupation_DEF:0 "the Trans-Caucasian Imperial March"
+  TRS_CM_French_Occupation_ADJ:0 "Trans-Caucasian"
+  
+  TRS_IA_French_Occupation:0 "Trans-Caucasian Social Republic"
+  TRS_IA_French_Occupation_DEF:0 "the Trans-Caucasian Social Republic"
+  TRS_IA_French_Occupation_ADJ:0 "Trans-Caucasian"
+  
+  TRS_Militarist_French_Occupation:0 "Caucasusian State"
+  TRS_Militarist_French_Occupation_DEF:0 "the Caucasusian State"
+  TRS_Militarist_French_Occupation_ADJ:0 "Caucasian"
+
+  TRS_SP_French_Occupation:0 "Trans-Caucasia"
+  TRS_SP_French_Occupation_DEF:0 "Trans-Caucasia"
+  TRS_SP_French_Occupation_ADJ:0 "Trans-Caucasian"
+  
+  CRI_JD_French_Occupation:0 "Crimean National State"
+  CRI_JD_French_Occupation_DEF:0 "the Crimean National State"
+  CRI_JD_French_Occupation_ADJ:0 "Crimean"
+  
+  CRI_CM_French_Occupation:0 "Principality of Crimea"
+  CRI_CM_French_Occupation_DEF:0 "the Principality of Crimea"
+  CRI_CM_French_Occupation_ADJ:0 "Crimean"
+  
+  CRI_IA_French_Occupation:0 "Free Workers' State of Crimea"
+  CRI_IA_French_Occupation_DEF:0 "the Free Workers' State of Crimea"
+  CRI_IA_French_Occupation_ADJ:0 "Crimean"
+  
+  CRI_Militarist_French_Occupation:0 "Crimean State"
+  CRI_Militarist_French_Occupation_DEF:0 "the Crimean State"
+  CRI_Militarist_French_Occupation_ADJ:0 "Crimean"
+
+  CRI_SP_French_Occupation:0 "Empire of Taurica"
+  CRI_SP_French_Occupation_DEF:0 "the Empire of Taurica"
+  CRI_SP_French_Occupation_ADJ:0 "Crimean"
+  
+  KUB_JD_French_Occupation:0 "National Republic of Greater Kuban"
+  KUB_JD_French_Occupation_DEF:0 "the National Republic of Greater Kuban"
+  KUB_JD_French_Occupation_ADJ:0 "Kuban"
+  
+  KUB_CM_French_Occupation:0 "Duchy of Kuban"
+  KUB_CM_French_Occupation_DEF:0 "the Duchy of Kuban"
+  KUB_CM_French_Occupation_ADJ:0 "Kuban"
+  
+  KUB_IA_French_Occupation:0 "Kuban Peasants' and Miners' Republic"
+  KUB_IA_French_Occupation_DEF:0 "the Kuban Peasants' and Miners' Republic"
+  KUB_IA_French_Occupation_ADJ:0 "Kuban"
+  
+  KUB_Militarist_French_Occupation:0 "Kuban State"
+  KUB_Militarist_French_Occupation_DEF:0 "the Kuban State"
+  KUB_Militarist_French_Occupation_ADJ:0 "Kuban"
+
+  KUB_SP_French_Occupation:0 "Empire of Scythia"
+  KUB_SP_French_Occupation_DEF:0 "the Empire of Scythia"
+  KUB_SP_French_Occupation_ADJ:0 "Kuban"
+
