--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -523,8 +523,8 @@
   Russian_Flavour.7.a:0 "Well, shit."
 
   Russia_Rasputin.1.t:0 "Whispers Across Siberia"
-  Russia_Rasputin.1.d:0 ""
-  Russia_Rasputin.1.a:0 ""
+  Russia_Rasputin.1.d:0 "Usually, Siberia is not a problem for the government in Saint Petersburg. However, in recent months, we have been receiving concerning reports about a secret cult gaining strength. This cult appears to revolve around an individual named "Rasputin", a mad monk who believes himself to be the Messiah. Usually, cults like this would be ignored, especially if they were in such a vast, empty place like Siberia, where they prove no threat to our control.\n\nHowever, the Rasputinite cult is starting to become a major problem and a headache for the authorities in Siberia, as Rasputin's charisma continues to draw in more and more people every day. The Okhrana believe that the cult has already infiltrated the local government there, and the continued trickle of information from Siberia paints an ominous picture for us.\n\nSomething must be done about Rasputin and his cult..."
+  Russia_Rasputin.1.a:0 "...Lest the Mad Monk completely unravel our control in Siberia."
 
   Russia_Rasputin.2.t:0 "The Might of God"
   Russia_Rasputin.2.d:0 ""
