--- a/localisation/english/PB_autonomy_l_english.yml
+++ b/localisation/english/PB_autonomy_l_english.yml
@@ -39,5 +39,7 @@
 
  autonomy_PB_blacksite:0 "Blacksite"
 
+ autonomy_PB_Intermarium_Member:0 "Intermarium State"
+
  PB_can_raise_autonomy_level:0 "Can Raise Autonomy Level"
  PB_can_lose_autonomy_level:0 "Can Lower Autonomy Level"
